ロケーション部分 > 追加

--- a/scss/components/_contents.scss
+++ b/scss/components/_contents.scss
@@ -42,7 +42,8 @@
 
 			// コンセプトエリア
 			&.-concept{
-				top: 2.25%;
+				// top: 2.25%;
+				top: 2%;
 				@include min(768){
 					top: 4.5%;
 				}
